Made tests more reliable to run